# the-decommissioner

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  TODOS.md  docker-compose.yml  nginx.conf
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_device_photo.py  bb99816fdc31_initial_schema.py  c2d3e4f5a6b7_add_device_storage_type.py
backend/app/: main.py
backend/app/api/: _job_runners.py  certificates.py  dependencies.py  devices.py  duplicate_groups.py  file_entries.py  jobs.py  snapshots.py  storage_targets.py
backend/app/core/: config.py  database.py  deps.py  job_factory.py  runner.py
backend/app/engines/: catalog.py  ios.py  migrate.py  verify.py  wipe.py
backend/app/models/: __init__.py  dependency.py  device.py  duplicate_group.py  enums.py  file_entry.py  job.py  snapshot.py  storage_target.py
backend/tests/: conftest.py  test_api_certificates.py  test_api_dependencies.py  test_api_devices.py  test_api_duplicate_groups.py  test_api_file_entries.py  test_api_jobs.py  test_api_snapshots.py  test_api_storage_targets.py  test_catalog.py  test_deps.py  test_ios_engine.py  test_job_factory.py  test_migrate_engine.py  test_runner.py  test_verify_engine.py  test_wipe_engine.py
docs/: data-models.md  explanation-architecture.md  howto-storage-targets.md  keyboard-triage.md  reference-stages.md  subprocess-runner.md  tutorial-first-decommission.md  ui-design.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DependencyBadge.tsx  DeviceCard.tsx  DeviceIcon.tsx  DeviceSidebar.tsx  EmptyState.tsx  ErrorBoundary.tsx  JobLog.tsx  PhotoUpload.tsx  StageProgress.tsx  StorageTargetCard.tsx  StorageTargetForm.tsx
frontend/src/components/ui/: button.tsx
frontend/src/lib/: api.ts  dupHeuristic.test.ts  dupHeuristic.ts  store.ts  stream.ts  utils.test.ts  utils.ts
frontend/src/pages/: AddDevice.tsx  Dashboard.tsx  DeviceWizard.tsx  DuplicateResolver.tsx  DuplicateTriageMode.tsx  FileBrowser.tsx  MigrateStage.tsx  RecycleStage.tsx  Settings.tsx  WipeStage.tsx
frontend/src/stages/: CatalogStage.tsx  DuplicateResolver.tsx  DuplicateTriageMode.tsx  FileBrowser.tsx  MigrateStage.tsx  RecycleStage.tsx  VerifyStage.tsx  WipeStage.tsx
frontend/src/test/: AddDevice.test.tsx  CatalogStage.test.tsx  Dashboard.test.tsx  DeviceIcon.test.tsx  DeviceSidebar.test.tsx  DeviceWizard.test.tsx  DuplicateResolver.test.tsx  DuplicateTriageMode.test.tsx  ErrorBoundary.test.tsx  FileBrowser.test.tsx  JobLog.test.tsx  MigrateStage.test.tsx  PhotoUpload.test.tsx  RecycleStage.test.tsx  Settings.test.tsx  StageProgress.test.tsx  StorageTargetCard.test.tsx  StorageTargetForm.test.tsx  VerifyStage.test.tsx  WipeStage.test.tsx  api.test.ts  helpers.tsx  setup.ts  store.test.ts
frontend/src/types/: api.ts
